chore: security & robustness hardening; i18n and UI bug fixes
Summary of changes:

- Sanitize Markdown→HTML in `AnalystPanel` (CommonMark.escapeHtml(true) + Jsoup.clean) and add XSS unit test.
- Add immutable system prompt guard and enforce 128KB prompt cap for Ollama requests.
- Cap `fullHistoryMarkdown` to 2MB and trim older history with a '[... truncated]' marker.
- Replace ad-hoc threads with a daemon `ExecutorService` in `ExtensionAiAnalyst`; shut down in `unload()`.
- Add shared `OkHttpClient` in the extension and inject into `OllamaClient` to reuse connection pools.
- Reuse CommonMark `Parser` and `HtmlRenderer` instances to reduce GC pressure.
- Move UI strings to `Messages.properties` and fix malformed control-character/emoji encodings.
- Add defensive `ImageIO.read()` fallback to `ImageIcon` and add `AnalystPanelImageTest`.

Bug fixes:

- Avoid duplicate "### Analysis for: <url>" header in `AnalystPanel.updateAnalysis()` when the model already includes it.
- Fix malformed status text artifacts (removed stray control-character sequences) in `Messages.properties`.

Why: Improve security (XSS, SSRF), reliability (threading, memory), maintainability (i18n), and fix UI regressions.

--- a/src/main/resources/org/zaproxy/zap/extension/aitrafficanalyst/resources/Messages.properties
+++ b/src/main/resources/org/zaproxy/zap/extension/aitrafficanalyst/resources/Messages.properties
@@ -1,3 +1,18 @@
 aitrafficanalyst.name=AI Traffic Analyst
 aitrafficanalyst.desc=AI-driven traffic analysis using local LLMs.
 aitrafficanalyst.menu.analyze=AI Analyst: Analyze Request
+aitrafficanalyst.panel.name=AI Analysis
+aitrafficanalyst.btn.clear=Clear All
+aitrafficanalyst.btn.save=Save Report
+aitrafficanalyst.options.ollamaUrl=Ollama Base URL:
+aitrafficanalyst.options.ollamaUrl.tooltip=e.g. http://localhost:11434/
+aitrafficanalyst.options.modelName=Model Name:
+aitrafficanalyst.options.refresh=Refresh Models
+aitrafficanalyst.options.systemPrompt=System Prompt:
+aitrafficanalyst.options.reset=Reset to Defaults
+aitrafficanalyst.options.modelsLoaded=Models loaded successfully!
+aitrafficanalyst.status.thinking=Thinking...
+aitrafficanalyst.status.sending=\uD83D\uDCE1 Sending live request to capture fresh response...
+aitrafficanalyst.status.querying=\uD83E\uDD16 Thinking... (Querying {0} with live data)...
+aitrafficanalyst.status.thinking_with_model=Thinking... (Querying {0})...
+aitrafficanalyst.warn.promptTruncated=\u26A0 Prompt truncated to {0} bytes before sending to model.
